--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
 }
 .todo-list {
   padding: 40px;
+  overflow-y: auto;
 }
 #todoInput {
   flex: 1;
@@ -34,13 +35,6 @@ body {
 }
 #addButton {
   flex: 0.1;
-  border: none;
-}
-#addButton:hover {
-  background-color: rgb(229, 172, 98);
-}
-#addButton:focus {
-  outline-color: rgb(229, 172, 98);
 }
 
 .wrapper {
@@ -75,4 +69,23 @@ ul {
 }
 input[type="checkbox"] {
   inline-size: 30px;
+}
+
+#todoListView .complete {
+  text-decoration: line-through;
+  color: grey;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.button {
+  background-color: rgb(241, 196, 137);
+  border: none;
+}
+.button:hover {
+  background-color: rgb(238, 180, 103);
 }
